# crawl-sat

./: .env.example  .gitignore  CLASSMARKER_DATA_GUIDE.md  README.md  pyproject.toml
src/classmarker_crawler/: __init__.py  cli.py  config.py  crawler.py  details.py  details_cli.py  exporters.py  images.py
src/classmarker_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_details.py  test_exporters.py  test_images.py
